--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -580,7 +580,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x14ca61f70>"
+       "<matplotlib.legend.Legend at 0x14e020770>"
       ]
      },
      "execution_count": 12,
@@ -741,16 +741,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['scale_y.pkl']"
+       "['./models/scale_y.pkl']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,8 +758,8 @@
    "source": [
     "from joblib import dump\n",
     "\n",
-    "dump(scale_x,'scale_x.pkl')\n",
-    "dump(scale_y,'scale_y.pkl')"
+    "dump(scale_x,'./models/scale_x.pkl')\n",
+    "dump(scale_y,'./models/scale_y.pkl')"
    ]
   },
   {
@@ -1400,18 +1400,18 @@
       "  y = column_or_1d(y, warn=True)\n",
       "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n",
-      "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1624: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1624: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
       "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1624: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n",
       "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1624: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
+      "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1624: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1624: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n",
       "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1624: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "/opt/homebrew/anaconda3/envs/che596/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1624: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
@@ -1934,10 +1934,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean_fit_time [3.98453588 7.56455722 6.16598239 7.82900424 7.5599112  6.71260252]\n",
-      "std_fit_time [0.88358554 0.1509947  0.81408733 0.25258133 0.57229534 0.71825904]\n",
-      "mean_score_time [0.00575204 0.00631537 0.00696497 0.00489974 0.00844755 0.00418897]\n",
-      "std_score_time [0.00219199 0.00124645 0.00231433 0.00078648 0.00305449 0.00052771]\n",
+      "mean_fit_time [3.63559546 6.504316   5.24445281 6.69122415 6.32632699 5.73893023]\n",
+      "std_fit_time [0.70870316 0.14169946 0.77630448 0.11656492 0.36757011 0.58129924]\n",
+      "mean_score_time [0.00483041 0.00798521 0.00681396 0.00892935 0.00969882 0.00415177]\n",
+      "std_score_time [0.00059793 0.00461418 0.00264233 0.00294013 0.00749969 0.00094768]\n",
       "param_alpha [0.1 0.1 0.01 0.01 0.001 0.001]\n",
       "param_solver ['adam' 'sgd' 'adam' 'sgd' 'adam' 'sgd']\n",
       "params [{'alpha': 0.1, 'solver': 'adam'}, {'alpha': 0.1, 'solver': 'sgd'}, {'alpha': 0.01, 'solver': 'adam'}, {'alpha': 0.01, 'solver': 'sgd'}, {'alpha': 0.001, 'solver': 'adam'}, {'alpha': 0.001, 'solver': 'sgd'}]\n",
@@ -2513,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2530,31 +2530,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model.joblib']"
+       "['./models/model.joblib']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from joblib import dump\n",
-    "dump(grid.best_estimator_, 'model.joblib')"
+    "dump(grid.best_estimator_, './models/model.joblib')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
